--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "portfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-marquee-slider": "^1.1.5",
     "swiper": "^11.1.11"
   },
   "devDependencies": {
