--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-marquee-slider": "^1.1.5",
+    "react-router-dom": "^6.26.1",
     "swiper": "^11.1.11"
   },
   "devDependencies": {
